examples/compiler_errors/adversarial/common_dev_mistakes/Main.flx
import MissingPublicAccess
import PrivateMemberAccess
import CollectionsConfusion
import UnknownEffectTypo
import UnknownBaseMemberTypo
import UnknownIdentifierTypo
import WrongArity

fn main() -> Unit {
    let entry = 1
}
